overflow fix

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,6 +14,13 @@ body {
 .our-works button:hover {
   color: #bb9c36;
 }
+html,
+#about,
+#services,
+#collections,
+#works {
+  overflow-x: hidden;
+}
 #hero {
   background: url("../img/hero.png");
   background-repeat: no-repeat;
@@ -66,6 +73,7 @@ button {
 .discoverr:hover {
   color: antiquewhite;
 }
+
 #about h3,
 #services h3,
 #works h3,
